# path-finding

./: Cargo.toml  README.md  angular.json  index.html  package-lock.json  package.json
src/: algorithms.rs  grid.rs  index.js  index.scss  main.rs  styles.scss
src/app/: app.component.html  app.component.spec.ts  app.component.ts
src/app/board/: board.component.html  board.component.scss  board.component.ts
src/app/square/: square.component.html  square.component.scss  square.component.ts
