[package]
name = "path-finding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
fixedbitset = "0.4.2"
wasm-bindgen = "0.2.90"
console_log = { version = "1.0.0", features = ["color"] }



[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Node',
  'Text',
]
